                 This bug is related to /dev/random. Now hash function uses /dev/urandom,
                 and the mouse need to be moved during the 'add user' action.
- BUGFIX       : Unable to delete offers. This bug was present on older versions but with the Products table. This is
                 Related to QSqlTableModel class. To fix it, an own delete method was coded.
- BUGFIX       : Offers Editor's validate check (date,amount,product) fixed.
- IMPROVEMENT  : Increased refresh time for the model views (all tables on Squeeze), they refresh every 2 minutes instead of 5 seconds.
- IMPROVEMENT  : SpecialOrders delivery date now is printed in the format: 'Mon 21 May, 4:30 PM'.
- IMPROVEMENT  : SpecalOrders are now allowed to be marked as delivered on the same day.
- IMPROVEMENT  : Now specialOrders notes are up to 800 characters long.
- IMPROVEMENT  : Some important fields (group elements, items in transactions...) are expanded to 1000 chars, and other to 255 from lower values.
- UPDATE       : Some translations where updated (de,es).



CHANGELOG FOR LEMONPOS VERSION 0.9.2
-----------------------------------------------------
- BUGFIX       : Hidden first and last values for profit and sales plots on squeeze.
- BUGFIX       : When using date change feature, it seems that the transaction was not completed sucessfully.
- BUGFIX       : On the search panel, the RAW products where excluded but still counted on the result.
- BUGFIX       : Groups dont get all its taxes from the elements, if the group tax is not set correctly on creation, it will not have a correct one.
- BUGFIX       : When changing configuration, now lemon requests a new transaction and balance.
- BUGFIX       : Missing settings-check for drawer openning.
- IMPROVEMENT  : Fixing and improved CSS style sheet. Updated CSS, improving method on lemon to load the correct file for login window.
- UPDATE       : Updating PDF documentation.

NOTE: 0.9.2 version does not requiere a database upgrade.


