@@ -923,7 +923,7 @@
               <property name="spacing">
                <number>1</number>
               </property>
-              <item row="0" column="0">
+              <item row="2" column="0">
                <widget class="QLabel" name="labelTotalpre">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
@@ -968,7 +968,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
+              <item row="2" column="1">
                <widget class="QLabel" name="labelTotal">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
@@ -1010,7 +1010,7 @@
                 </property>
                </widget>
               </item>
-              <item row="2" column="0">
+              <item row="4" column="0">
                <widget class="QLabel" name="labelChangepre">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
@@ -1058,7 +1058,7 @@
                 </property>
                </widget>
               </item>
-              <item row="2" column="1">
+              <item row="4" column="1">
                <widget class="QLabel" name="labelChange">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
@@ -1100,7 +1100,27 @@
                 </property>
                </widget>
               </item>
-              <item row="3" column="0">
+              <item row="0" column="0">
+               <widget class="QLabel" name="lblSubtotalPre">
+                <property name="text">
+                 <string>Subtotal:</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QLabel" name="lblSubtotal">
+                <property name="text">
+                 <string/>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
                <widget class="QLabel" name="lblSaleTaxesPre">
                 <property name="text">
                  <string>Taxes:</string>
@@ -1110,7 +1130,7 @@
                 </property>
                </widget>
               </item>
-              <item row="3" column="1">
+              <item row="1" column="1">
                <widget class="QLabel" name="lblSaleTaxes">
                 <property name="text">
                  <string/>
